correct countdown section class names for readability

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -246,11 +246,11 @@ a, a:hover, a:visited {
   }
 }
 
-.countdown-clock_gray__heading {
+.countdown-clock--gray__heading {
   color: white;
 }
 
-.countdown-clock_blue__heading {
+.countdown-clock--blue__heading {
   color: #333950;
 }
 
@@ -275,27 +275,27 @@ a, a:hover, a:visited {
   }
 }
 
-.countdown-clock__timer__card {
+.countdown-clock__card {
   border-radius: 0.25rem;
   text-align: center;
 }
 
 @media (min-width: 48rem) {
-  .countdown-clock__timer__card {
+  .countdown-clock__card {
     max-width: 6.25rem;
     border-radius: 0.75rem;
   }
 }
 
-.countdown-clock_gray__timer__card {
+.countdown-clock--gray__card {
   background-color: #333950;
 }
 
-.countdown-clock_blue__timer__card {
+.countdown-clock--blue__card {
   background-color: rgba(81, 117, 255, 0.15);
 }
 
-.countdown-clock__timer__card__number {
+.countdown-clock__number {
   display: block;
   padding: 0.75rem 1rem 0 1rem;
   text-align: center;
@@ -305,28 +305,28 @@ a, a:hover, a:visited {
 }
 
 @media (max-width: 23.375rem) {
-  .countdown-clock__timer__card__number {
+  .countdown-clock__number {
     font-size: 1.75rem;
     padding: 0.75rem 0.5rem 0 0.5rem;
   }
 }
 
 @media (min-width: 48rem) {
-  .countdown-clock__timer__card__number {
+  .countdown-clock__number {
     padding-top: 2rem;
     font-size: 3.5rem;
   }
 }
 
-.countdown-clock_gray__timer__card__number {
+.countdown-clock--gray__number {
   color: white;
 }
 
-.countdown-clock_blue__timer__card__number {
+.countdown-clock--blue__number {
   color: #5175ff;
 }
 
-.countdown-clock__timer__card__text {
+.countdown-clock__text {
   display: block;
   padding-bottom: 0.75rem;
   font-size: 0.75rem;
@@ -336,16 +336,16 @@ a, a:hover, a:visited {
 }
 
 @media (min-width: 48rem) {
-  .countdown-clock__timer__card__text {
+  .countdown-clock__text {
     font-size: 1rem;
   }
 }
 
-.countdown-clock_gray__timer__card__text {
+.countdown-clock--gray__text {
   color: white;
 }
 
-.countdown-clock_blue__timer__card__text {
+.countdown-clock--blue__text {
   color: #333950;
 }
 
